rewriting(vibecoding) this shit for actual cuboids